--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,3 +1,4 @@
+
 .gallery {
   width: 100%;
   height: 100vh;
@@ -22,6 +23,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transition: all .2s ease;
+    z-index: 10000;
+    background: #323232;
   }
 
   &__image {
@@ -29,10 +33,13 @@
     width: 30%;
     aspect-ratio: 4/3;
     position: absolute;
+    min-height: 25%;
+    transition: 'all .2s ease';
 
     img {
       object-fit: cover;
       width: 100%;
+      height: 100%;
     }
   }
 
